--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
   <meta property="og:title" content="Bob Johnson | Full Stack Developer">
   <meta property="og:description"
     content="Bob Johnson is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
-  <meta property="og:image" content="https://anonymous0000007.github.io/portfolio/assets/images/favicon.png">
-  <meta property="og:url" content="https://anonymous0000007.github.io/portfolio/">
+  <meta property="og:image" content="https://akarasick.github.io/portfolio-1/assets/images/favicon.png">
+  <meta property="og:url" content="https://akarasick.github.io/portfolio-1/">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card meta tags -->
-  <meta name="twitter:site" content="https://anonymous0000007.github.io/portfolio/">
+  <meta name="twitter:site" content="https://akarasick.github.io/portfolio-1/">
   <meta name="twitter:title" content="Bob Johnson | Full Stack Developer">
   <meta name="twitter:description"
     content="Bob Johnson is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
-  <meta name="twitter:image" content="https://anonymous0000007.github.io/portfolio/assets/images/favicon.png">
-  <meta name="twitter:url" content="https://anonymous0000007.github.io/portfolio/">
+  <meta name="twitter:image" content="https://akarasick.github.io/portfolio-1/assets/images/favicon.png">
+  <meta name="twitter:url" content="https://akarasick.github.io/portfolio-1/">
   <meta name="twitter:creator" content="@Bob091998">
 
   <!-- Favicon -->
@@ -54,8 +54,8 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Bob Johnson",
-      "url": "https://anonymous0000007.github.io/portfolio/",
-      "image": "https://anonymous0000007.github.io/portfolio/assets/images/favicon.png",
+      "url": "https://akarasick.github.io/portfolio-1/",
+      "image": "https://akarasick.github.io/portfolio-1/assets/images/favicon.png",
       "description": "Bob Johnson is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.",
       "sameAs": [
         "https://www.linkedin.com/in/er-Bob",
