--- a/index.html
+++ b/index.html
@@ -203,15 +203,10 @@
         <div class="drawer">
           <a class="press mail" href="mailto:Bob.Johnson.dev@gmail.com" target="_blank" aria-label="mail">
           </a>
-          <a class="press whatsapp" href="https://wa.me/917984299636" target="_blank" aria-label="whatsapp">
+
+          <a class="press linkedin" href="https://www.linkedin.com/in/adamkarasick/" target="_blank" aria-label="linkedin">
           </a>
-          <a class="press linkedin" href="https://in.linkedin.com/in/er-Bob" target="_blank" aria-label="linkedin">
-          </a>
-          <a class="press github" href="https://github.com/anonymous0000007" target="_blank" aria-label="github"
-            data-is-filter-invert-needed="true">
-          </a>
-          <a class="press twitter" href="https://x.com/Bob091998" target="_blank" aria-label="twitter"
-            data-is-filter-invert-needed="true">
+
           </a>
         </div>
       </div>
